fixed overflow

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,22 +1,24 @@
 .menu {
   background: rgb(25, 21, 54);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   min-height: 100vh;
   width: 100%;
+  height: 100%;
   z-index: 99;
 
-  transform: translateX(-100%);
+  transform: translateX(+100%);
   transition: all 0.8s;
   overflow: auto;
+
+  padding-bottom: 30px;
 
   &:target {
     transform: translateX(0);
 
-
     @include desktop {
-      transform: translate(-100%);
+      transform: translate(+100%);
     }
   }
 
