--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,13 +1,12 @@
 .html {
   scroll-behavior: smooth;
-  overflow: hidden;
 }
 
 .page {
   color: $white;
   position: relative;
-}
 
-.page:has(.menu:target) {
-  overflow: hidden;
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
 }
